refine documentation
